# compressor

./: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile2  README.md  aclocal.m4  buildgrid.py  compressor.pro  configure  configure.ac  validate.C
autom4te.cache/: output.0  output.1  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
cmctools/: cmcpdfs.sh
inc/: Estimators.hh  Grid.hh  LocalPDF.hh  Makefile.in  Minimizer.hh  config.h.in  mini.h  randomgenerator.h  utils.hh
m4/: gsl.m4  root.m4
oldcode/: analyser  compressor  correlations.py
oldcode/doc/: compression.lyx  compression.lyx~
oldcode/src/: main.cc  main2.cc  randomgenerator.cc
oldcode/test/nx70/: c1.eps  plot2.C
oldcode/test/oldtest/nx70/: plot.C
oldcode/test/test_all/: rel_all.eps
oldcode/test/test_gluon/: erf.eps  plot.C  rel_gluon.eps
oldcode/test/test_gluonuds/: plot.C  plot_rel.C  rel_guds.eps
src/: Estimators.cc  Grid.cc  LocalPDF.cc  Makefile.am  Makefile.in  Minimizer.cc  compressor  main.cc  main2.cc  mini.cc  utils.cc
test/: erf_n_erftotal.eps  plot.C
test/new/: plot.C  plot_rel.C
test/nx50/: erf_nx50.eps
test/nx70/: c.eps  erf_n_erftotal.eps  plot.C
test/nx70cv/: c.eps
test/nx70sd/: c2.eps  plot.C
test/nx90/: erf_nx90.eps  plot.C~
test/oldtest/nx70/: erf_n_erfcv.eps  test.eps
test/oldtest/nx70cv/: plot.C
test/oldtest/nx70sd/: c.eps
test/oldtest/nx90/: plot.C
tools/: Correlations.ipynb  CorrelationsCMCMETA.ipynb  CorrelationsHessian.ipynb  compressor_buildgrid_cmcpdf
