bin_PROGRAMS = $(top_builddir)/bin/compressor

__top_builddir__bin_compressor_SOURCES = Estimators.cc  Grid.cc  main.cc  Makefile.am  Minimizer.cc  utils.cc

__top_builddir__bin_compressor_CPPFLAGS = -I$(top_srcdir)/inc $(LHAPDF_CPPFLAGS) $(GSL_CPPFLAGS)
__top_builddir__bin_compressor_LDADD  = $(LHAPDF_LDFLAGS) $(GSL_LDFLAGS)