bin_PROGRAMS = $(top_builddir)/bin/compressor

__top_builddir__bin_compressor_SOURCES = Estimators.cc  Grid.cc  main.cc  Makefile.am  Minimizer.cc  utils.cc

__top_builddir__bin_compressor_CPPFLAGS = -I$(top_srcdir)/inc $(ROOT_CPPFLAGS) $(LHAPDF_CPPFLAGS) $(GSL_CPPFLAGS)
__top_builddir__bin_compressor_LDADD  = $(ROOT_LDFLAGS) $(LHAPDF_LDFLAGS) $(GSL_LDFLAGS)